{
  "login": {
    "description_line_1": "Invierte en la bolsa de valores de EEUU",
    "description_line_2": "desde $1 dólar con transferencias locales",
    "signUpButton": "¡Abrir mi cuenta!",
    "signInButton": "Iniciar sesión"
  },
  "loginOptions": {
    "title": "Crea tu cuenta",
    "emailOption": "Continuar con email",
    "googleOption": "Continuar con Google",
    "appleOption": "Continuar con Apple",
    "terms": "Al continuar, aceptas los",
    "termsLink": "Términos de uso"
  },
  "loginWithEmail": {
    "title": "¿Cuál es tu email?",
    "emailLabel": "Email",
    "continueButton": "Continuar",
    "errorText": "Email inválido",
    "errorCodeText": "Código o email inválido",
    "sendingCode": "Enviando código...",
    "verifyingCode": "Verificando código...",
    "errorCodeTryAgain": "Intenta de nuevo"
  },
  "emailOtpValidation": {
    "title": "Ingresa el código de verificación",
    "subtitle": "Te enviamos uno a ",
    "continueButton": "Verificar y continuar"
  },
  "kycPreview": {
    "title": "¡Ayudanos a verificar tu identidad!",
    "subtitle": "La verificación de identidad es requerida por las regulaciones locales.",
    "startButton": "Empezar",
    "laterButton": "Hacerlo más tarde",
    "terms": "Solo tomará unos minutos. Mantendremos tus datos seguros."
  },
  "kycSuccess": {
    "title": "¡Perfecto!",
    "subtitle": "Estamos verificando tu identidad",
    "wait": "Te avisaremos cuando la verificación esté completa.",
    "doneButton": "Terminado"
  },
  "kycProvider": {
    "requestingPermission": "Solicitando permiso...",
    "cameraPermissionRequired": "Permiso de cámara requerido para la verificación de identidad",
    "cameraPermissionExplanation": "Por favor, otorgue el permiso para continuar",
    "grantPermissionButton": "Otorgar permiso"
  },
  "marketClosed": "El mercado está cerrado",
  "home": {
    "depositActionText": "Depositar",
    "sendActionText": "Enviar",
    "currency": "USD",
    "empty_transactions": "No tienes movimientos",
    "date_format": "d 'de' MMMM",
    "transactions": "Movimientos",
    "withdrawal": "Retiro",
    "actions": {
      "deposit_crypto": "Deposito cripto",
      "deposit_crypto_caption": "Desde tu billetera o exchange",
      "deposit_from_bank": "Transferencia bancaria",
      "deposit_from_bank_caption": "Desde tu banco local"
    },
    "logout": {
      "title": "Cerrar sesión",
      "message": "¿Estás seguro de querer cerrar sesión?",
      "cancel": "Cancelar",
      "confirm": "Cerrar sesión"
    }
  },
  "depositCrypto": {
    "title": "Depósito con cripto",
    "addressLabel": "Dirección de la billetera",
    "infoText": "Esta dirección solamente puede recibir USDC en Base",
    "disclaimerText": "Asegúrate de que la red sea la misma que la de la billetera desde la que envías o podrías perder tus fondos.",
    "addressCopied": "Dirección copiada al portapapeles"
  },
  "depositWithBank": {
    "title": "Transferencia bancaria"
  },
  "comingSoon": {
    "title": "¡Próximamente!",
    "subtitle": "Estamos trabajando en esta función. ¡Mantente atento!"
  },
  "recipients": {
    "title": "A quién le vas a enviar dinero",
    "searchResultLabel": "Encontrado",
    "pasteButtonText": "Pegar",
    "searchPlaceholder": "BaseName o Dirección"
  },
  "quote": {
    "available": "Disponible",
    "continue": "Continuar",
    "arrival": "Puede llegar en aprox",
    "fee": "Comisión"
  },
  "quoteConfirmation": {
    "title": "Vas a enviar",
    "amount": "Monto",
    "exchangeRate": "Tipo de cambio",
    "total": "Total",
    "disclaimer": "Verifica que los datos del destinatario sean correctos. Esta transacción no se puede cancelar, recuperar ni reembolsar.",
    "fee": "Comisión",
    "accountNumber": "Número de cuenta",
    "timerDescription": "Tasa se actualizará en",
    "confirm": "Confirmar y enviar",
    "to": "a",
    "pending": "Procesando..."
  },
  "sendCrypto": {
    "title": "Retirar a mi cuenta",
    "availableLabel": "Disponible",
    "continueButton": "Continuar",
    "errorText": "No tienes suficiente saldo"
  },
  "sendConfirmation": {
    "title": "Confirmar retiro",
    "accountNumber": "Dirección",
    "send": "Retirar",
    "fee": "Comisión",
    "total": "Total",
    "disclaimer": "Una vez confirmada, la transacción no se puede deshacer",
    "confirmButtonText": "Confirmar",
    "pendingStatus": "Pendiente"
  },
  "sendSuccess": {
    "title": "¡Listo!",
    "subtitle": "Estamos procesando tu transacción.\nPronto estará disponible",
    "doneButton": "Entendido",
    "viewReceiptButton": "Ver comprobante"
  },
  "sentReceipt": {
    "headerText": "Enviaste",
    "recipient_label": "a",
    "date": "Fecha",
    "accountNumber": "Número de cuenta",
    "reference": "Referencia",
    "status": "Estatus",
    "fee": "Comisión",
    "total": "Total",
    "doneButtonText": "Listo"
  },
  "faceId": {
    "prompt": "Confirma con tu Face ID",
    "fallback": "Usa tu contraseña"
  },
  "balance": {
    "equity": "Balance total",
    "available_funds": "Disponible"
  },
  "accountNotVerified": {
    "title": "Verifica tu cuenta",
    "subtitle": "¡Es rápido y sencillo!",
    "action": "Verificar mi cuenta"
  },
  "accountIncomplete": {
    "title": "Termina de verificar tu cuenta",
    "subtitle": "¡Es rápido y sencillo!",
    "action": "Verificar ahora"
  },
  "accountNotVerifiedError": {
    "title": "Te ha ocurrido un error",
    "subtitle": "Por favor intenta mas tarde"
  },
  "kycStatus": {
    "error": "Ha ocurrido un error"
  },
  "accountVerified": {
    "title": "Estamos validando tu cuenta",
    "subtitle": "Pronto te avisaremos"
  },
  "ordersListCard": {
    "myAssets": "Mis inversiones",
    "empty_transactions": "Aqui verás tus inversiones activas.",
    "empty_transactions_no_funds": "¡Haz tu primer depósito y comienza a invertir!",
    "empty_transactions_no_assets": "Presiona Comprar para invertir"
  },
  "homeActions": {
    "deposit": "Depositar",
    "explore": "Comprar"
  },
  "explore": {
    "title": "Acciones & Índices"
  },
  "profile": {
    "history": "Historial de movimientos",
    "withdraw": "Retirar",
    "settings": "Configuración",
    "logout": "Cerrar sesión",
    "version": "VERSIÓN"
  },
  "orderHistory": {
    "title": "Historial de transacciones",
    "buy": "Compra de",
    "sell": "Venta de",
    "all": "Todo",
    "orders": "Ordenes",
    "transfers": "Transferencias",
    "empty_transactions": "No hay transacciones"
  },
  "orderHistoryDetail": {
    "buy": "Compra de",
    "sell": "Venta de",
    "status": "Estatus",
    "reference": "Referencia",
    "amount": "Monto",
    "shares": "Acciones",
    "fee": "Comisión",
    "price": "Precio promedio"
  },
  "etfDetail": {
    "buy": "Comprar",
    "sell": "Vender",
    "from": "from: ",
    "to": "to: ",
    "description": "Acerca de"
  },
  "onBoarding": {
    "steps": {
      "step_1": {
        "subtitle": "Nombre como aparece en tu identificación"
      },
      "step_2": {
        "subtitle": "Selecciona tu país de residencia"
      },
      "step_3": {
        "subtitle": "Ingresa tu dirección completa"
      },
      "step_4": {
        "subtitle": "Confirma tu identidad"
      }
    },
    "title": "Completa tu \ninformación",
    "first_name_field": {
      "label": "Nombre",
      "hint": "Como aparece en tu identificación",
      "error_required": "Es requerido"
    },
    "middle_name_field": {
      "label": "Segundo nombre",
      "hint": "Como aparece en tu identificación",
      "error_required": "Es requerido"
    },
    "last_name_field": {
      "label": "Apellido",
      "hint": "Como aparece en tu identificación",
      "error_required": "Es requerido"
    },
    "second_last_name_field": {
      "label": "Segundo apellido",
      "hint": "Como aparece en tu identificación",
      "error_required": "Es requerido"
    },
    "birth_date_field": {
      "label": "Fecha de nacimiento",
      "month": "Mes",
      "day": "Día",
      "year": "Año",
      "error": {
        "min_age": "Debes ser mayor de {{age}} años"
      }
    },
    "country_field": {
      "label": "País de residencia",
      "error_required": "Es requerido",
      "hint": ""
    },
    "tax_id_number_field": {
      "label": "Numero de identificación fiscal",
      "error_required": "Es requerido",
      "hint": ""
    },
    "full_address": {
      "address_street_1_field": {
        "label": "Dirección principal",
        "hint": "Como aparece en un recibo servicio público",
        "error_required": "Es requerido",
        "error_invalid": "Dirección inválida"
      },
      "address_street_2_field": {
        "label": "Apartamento, unidad o piso",
        "hint": "Como aparece en un recibo servicio público",
        "error_invalid": "Dirección inválida",
        "error_required": "Es requerido"
      },
      "address_city_field": {
        "label": "Ciudad",
        "hint": "Como aparece en un recibo servicio público",
        "error_required": "Es requerido",
        "error_invalid": "La ciudad es inválida"
      },
      "address_state_field": {
        "label": "Provincia/Estado",
        "hint": "Como aparece en un recibo servicio público",
        "error_required": "Es requerido",
        "error_invalid": "La provincia/estado es inválida"
      },
      "address_postal_code_field": {
        "label": "Código postal",
        "hint": "Como aparece en un recibo servicio público",
        "error_required": "Es requerido",
        "error_invalid": "Código postal inválido"
      }
    },
    "continue_button": "Continuar"
  },
  "etfPurchase": {
    "timeLeft": "La cotización expira en {{time}}",
    "continue": "Continuar",
    "max": "MAX",
    "available": "Disponible",
    "price": "Precio",
    "fee": "Comisión",
    "total": "Total",
    "disclaimer": "Estas iniciando una orden de compra de <0>{{etf_amount}}</0> acciones de <1>{{display_name}} {{symbol}}</1> por <2>${{amount}}</2> a <3>${{etf_price}}</3> por acción.",
    "confirm": "Comprar",
    "success": {
      "title": "¡Orden Recibida!",
      "summary": "Estamos procesando tu compra de <0>${{amount}}</0> de <1>{{display_name}} {{symbol}}</1> a <2>${{etf_price}}</2> por acción.",
      "subtitle": "Tu inversión se realizó con éxito",
      "done_button": "Entendido",
      "view_order_button": "Ver orden"
    }
  },
  "etfSell": {
    "timeLeft": "La cotización expira en {{time}}",
    "continue": "Continuar",
    "max": "MAX",
    "available": "Disponible",
    "price": "Precio",
    "fee": "Comisión",
    "total": "Total",
    "disclaimer": "Estas iniciando una orden de venta de <0>{{etf_amount}}</0> acciones de <1>{{display_name}} {{symbol}}</1> por <2>${{amount}}</2> a <3>${{etf_price}}</3> por acción.",
    "confirm": "Vender",
    "success": {
      "title": "¡Orden Recibida!",
      "summary": "Estamos procesando tu venta de <0>${{amount}}</0> de <1>{{display_name}} {{symbol}}</1> a <2>${{etf_price}}</2> por acción.",
      "subtitle": "Tu venta se realizó con éxito",
      "done_button": "Entendido",
      "view_order_button": "Ver orden"
    }
  }
}
